chainsaw/2-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pod-test
spec:
  bindings:
    - name: namespace
      value: kube-public
  steps:
    - try:
        - assert:
            resource:
              apiVersion: apps/v1
              kind: Deployment
              metadata:
                labels:
                  k8s-app: kube-dns
                namespace: kube-system
              spec:
                (replicas >= `1` && replicas < `4`): true
                template:
                  spec:
                    # the `~` modifier tells Chainsaw to iterate over the array elements
                    ~.(containers):
                      securityContext: { }
